Added user name box.